<resources>
    <string name="app_name">FoodResQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Profile -->
    <string name="profile_name">John Smith</string>
    <string name="profile_type1">Premium</string>
    <string name="profile_type2">Free</string>
    <string name="profile_email">John123@gmail.com</string>
    <string name="profile_number">0835239867</string>
    <string name="history">History</string>
    <string name="orders">Orders</string>
    <string name="welcome">Welcome back.</string>
    <string name="error_email">Please input only email!</string>
    <string name="error_password">Password must have minimal 8 characters!</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="logIn">Login</string>
    <string name="navigateToregister">New user? Please register</string>

    <!-- register -->
    <string name="welcome_register">Welcome!\nWe are happy you could join us.</string>
    <string name="select_type_user">Select Type of User</string>
    <string-array name="type_user">
        <item>Restaurant</item>
        <item>Customer</item>
    </string-array>
    <string name="restaurant">Restaurant</string>
    <string name="navigateTologin">Already have account? Please login</string>
    <string name="btn_back">Button Back</string>
    <string name="product_name">Burger Set 2</string>
    <string name="price_before_discount"><strike>60K</strike></string>
    <string name="price_after_discount">Rp 25K</string>
    <string name="timer">04:02:30</string>
    <string name="product_content">1 Burger, fries and chili sauce</string>
    <string name="more_details">more details</string>
    <string name="restaurant_name">Burger Joint 5</string>
    <string name="restaurant_address">Smith Street 12</string>
    <string name="pick_up_time">Pick&#8211;up time : 12:00&#8211;18:00</string>
    <string name="rating">4.5/5</string>
    <string name="count">1</string>
    <string name="btn_minus">Button Minus</string>
    <string name="button_plus">Button Plus</string>
    <string name="order">Order</string>
    <string name="dropdwonUserType">Drop Dwon User Type</string>

    <!-- Order/History-->
    <string name="order_title">Burger Joint 1</string>
    <string name="order_address">Smith Street 12</string>
    <string name="order_pickup_time">Pick&#8211;up time:12:00&#8211;18:00</string>
    <string name="order_time">04:02:30</string>
    <string name="success">Succeed</string>
    <string name="cancelled">Canceled by Customer</string>

    <!-- Settings -->
    <string name="subscription">Subscription</string>
    <string name="subscription_icon">ic_subscription</string>
    <string name="settings">Settings</string>
    <string name="settings_icon">ic_settings</string>
    <string name="partner">Become a partner</string>
    <string name="partner_icon">ic_handshake</string>
    <string name="rate">Rate our app</string>
    <string name="rate_icon">ic_rate</string>


    <string name="available">12 available</string>
    <string name="txt_available">%1$d available</string>
    <string name="food_Item_title">Burger Set 2</string>
    <string name="selection_title">Fast Food</string>
    <string name="scan_here">Scan Here</string>
    <string name="cancel">C A N C E L</string>
    <string name="thank_you_rate">Thank you for the review</string>
    <string name="image_product">Image Product</string>
    <string name="restaurant_image">Restaurant Profile</string>
    <string name="star">Star Rating</string>
    <string name="register">Register</string>
    <string name="text_user_type">Text User Type</string>
    <string name="subscribe_to_premium">Subscribe To Premium</string>
    <string name="not_found">Not Found</string>
    <string name="already_subscribed">Already Subscribed</string>
    <string name="restaurant_map">Restaurant Map</string>
    <string name="quantityDetail">%1$d x</string>
    <string name="pickup_time">pick-up time : %1$s - %2$s</string>
    <string name="rating_format">%1$s /5</string>
    <string name="format_total_order">Total %1$s</string>
    <string name="show_direction">Show Direction</string>
    <string name="liner">pembatas</string>
    <string name="name">Name</string>
</resources>