<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeColor="@color/black"
    app:cardCornerRadius="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingHorizontal="15dp">

        <ImageButton
            android:id="@+id/btn_minus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/btn_minus"
            android:background="@drawable/minus"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/btn_minus"
            app:layout_constraintTop_toTopOf="@id/btn_minus"
            app:layout_constraintBottom_toBottomOf="@id/btn_minus"
            android:text="@string/count"
            android:textSize="32sp"
            android:paddingHorizontal="20dp"/>

        <ImageButton
            android:id="@+id/btn_plus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/button_plus"
            app:layout_constraintStart_toEndOf="@id/tv_counter"
            app:layout_constraintTop_toTopOf="@id/tv_counter"
            android:background="@drawable/plus"
            app:layout_constraintBottom_toBottomOf="@id/tv_counter"/>

        <Button
            android:layout_width="240dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toEndOf="@id/btn_plus"
            android:layout_marginStart="10dp"
            android:text="@string/order"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</com.google.android.material.card.MaterialCardView>