<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/detail_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/color_palette_7"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/price_before_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_before_discount"
                android:textSize="25sp"
                android:textColor="@color/color_text_2"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/price_after_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_after_discount"
                android:textSize="25sp"
                android:textColor="@color/color_palette_2"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                app:layout_constraintStart_toEndOf="@id/price_before_discount"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/price_after_discount"
                app:cardBackgroundColor="@color/color_palette_6"
                app:cardCornerRadius="20sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/price_after_discount"
                app:layout_constraintBottom_toBottomOf="@id/price_after_discount">

                <TextView
                    android:id="@+id/tv_availability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available"
                    android:textSize="12sp"
                    android:textColor="@color/color_text_1"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="5dp"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textStyle="bold"
                android:textColor="@color/color_text_3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"/>

            <Space
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_before_discount"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/product_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spacer"
                android:layout_marginStart="20dp"
                android:paddingBottom="20dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_1"
        app:strokeColor="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_restaurant"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/restaurant_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/exampl_burg" />

            <TextView
                android:id="@+id/tv_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/restaurant_name"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/img_restaurant"
                app:layout_constraintTop_toTopOf="@id/img_restaurant" />

            <TextView
                android:id="@+id/tv_restaurant_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/restaurant_address"
                android:textColor="@color/color_text_2"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@id/img_restaurant"
                app:layout_constraintTop_toBottomOf="@id/tv_restaurant_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/pick_up_time"
                android:textColor="@color/color_text_3"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_restaurant"
                app:layout_constraintStart_toEndOf="@id/img_restaurant"
                app:layout_constraintTop_toBottomOf="@id/tv_restaurant_address" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardBackgroundColor="@color/color_palette_3"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_star"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/star"
                        android:src="@drawable/ic_star"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="5dp"
                        android:paddingStart="0dp"
                        android:paddingEnd="10dp"
                        android:text="@string/rating"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_star"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>