<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_order_item"
    android:backgroundTint="@color/color_palette_1">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_history"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/rounded_corner_order_image_overlay"
        tools:srcCompat="@tools:sample/backgrounds/scenic"></com.google.android.material.imageview.ShapeableImageView>


    <TextView
        android:id="@+id/tv_history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/order_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_history"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_history_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/order_address"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/iv_history"
        app:layout_constraintTop_toBottomOf="@+id/tv_history_title" />


    <TextView
        android:id="@+id/tv_history_pickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancelled"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_history"
        app:layout_constraintTop_toBottomOf="@+id/tv_history_address" />

    <TextView
        android:id="@+id/tv_history_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/success"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>