<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:cardBackgroundColor="@color/color_palette_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.capstone.foodresq.ui.customView.EmailTextFieldCustomView
            android:id="@+id/textInputEdit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textEmail"
            android:fontFamily="sans-serif-condensed"
            android:ems="10"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/textField_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.capstone.foodresq.ui.customView.PasswordTextFieldCustomView
            android:id="@+id/textInputEdit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textPassword"
            android:fontFamily="sans-serif-condensed"
            android:ems="10"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.capstone.foodresq.ui.customView.ButtonCustomView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/logIn"
        android:textSize="16sp"
        tools:enabled="false"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/textField_password"
        android:background="@drawable/rounded_button"/>

    <TextView
        android:id="@+id/txt_navigateToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigateToregister"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/color_palette_5"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/loading_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>